--- a/src/utils/api.scss
+++ b/src/utils/api.scss
@@ -10,6 +10,12 @@
   border-left: 0.5px solid rgba(var(--ios26-glass-border-color-rgb), 0.6);
 }
 
+@mixin glass-background-button-activated {
+  box-shadow:
+    inset 0 0 8px 0 rgba(var(--ios26-glass-box-shadow-color-rgb), 0.2),
+    0 0 8px -4px rgba(var(--ios26-glass-box-shadow-color-rgb), 0.92);
+}
+
 @mixin glass-background-button-activated-dark($opacity: 0.56, $blur: 7px, $saturate: 180%) {
   background: rgba(var(--ios26-button-color-selected-rgb), $opacity);
   backdrop-filter: blur($blur) saturate($saturate);
